--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,7 +41,7 @@ jobs:
           DEFAULT_ADMIN_USER: dts-legacy-apps-support-team@hmcts.net
           DEFAULT_ADMIN_PASSWORD: '${DEFAULT_ADMIN_PASSWORD}'
           NOTIFY_API: '${NOTIFY_API}'
-          NOTIFY_OVERRIDE_EMAIL: ivan.touloumbadjian@hmcts.net
+          NOTIFY_OVERRIDE_EMAIL: dts-legacy-apps-support-team@hmcts.net
           BUCKET_NAME: 'cloud-platform-558bc9877f5cc03fc5d7a241c17360b5' # use the DEV S3 bucket for e2e test uploads for all environments
           AWS_REGION: eu-west-2
           GOVUK_PAY_API: 'https://publicapi.payments.service.gov.uk/'
