--- a/deploy/development/app-deployment.yaml
+++ b/deploy/development/app-deployment.yaml
@@ -64,7 +64,7 @@ spec:
           - name: LOG_LEVEL
             value: DEBUG
           - name: NOTIFY_OVERRIDE_EMAIL
-            value: ivan.touloumbadjian@hmcts.net
+            value: dts-legacy-apps-support-team@hmcts.net
           - name: NOTIFY_API
             valueFrom:
               secretKeyRef:
