--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -68,6 +68,13 @@ jobs:
                 name: Login to DEV ECR
                 command: |
                   aws ecr get-login-password --region $ECR_REGION_DEV | docker login --username AWS --password-stdin ${AWS_ECR_REGISTRY_ID_DEV}.dkr.ecr.${ECR_REGION_DEV}.amazonaws.com
+            - run:
+                name: Upgrade DEV DB
+                environment:
+                  SQLALCHEMY_DATABASE_URI: $DEV_SQLALCHEMY_DATABASE_URI
+                command: |
+                  . venv/bin/activate
+                  flask db upgrade
       - when:
           condition:
             equal: [ PREPROD, << parameters.env_name >> ]
