--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -77,7 +77,7 @@ jobs:
             - run:
                 name: Upgrade DEV DB
                 environment:
-                  SQLALCHEMY_DATABASE_URI: $DEV_SQLALCHEMY_DATABASE_URI
+                  SQLALCHEMY_DATABASE_URI: '${DEV_SQLALCHEMY_DATABASE_URI}'
                 command: |
                   venv/bin/flask db upgrade
       - when:
