--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -115,6 +115,7 @@ jobs:
           command: |
             . venv/bin/activate
             flask db stamp head
+            flask db migrate
             flask db upgrade
       - run:
           name: Run unit and integration tests
