--- a/deploy/staging/admin-deployment.yaml
+++ b/deploy/staging/admin-deployment.yaml
@@ -98,3 +98,10 @@ spec:
               secretKeyRef:
                 name: elasticache-grc-preprod
                 key: url
+          - name: GLIMR_API_KEY
+            valueFrom:
+              secretKeyRef:
+                name: basic-auth
+                key: glimr-api-key
+          - name: GLIMR_BASE_URL
+            value: "https://glimr-preprod.staging.apps.hmcts.net/glimr_preprod/api/tdsapi"
