--- a/requirements.txt
+++ b/requirements.txt
@@ -1,73 +1,114 @@
+aiozipstream==0.4
 alembic==1.13.3
+arabic-reshaper==3.0.0
+asgiref==3.8.1
+asn1crypto==1.5.1
 attrs==24.2.0
+Authlib==1.5.2
 Babel==2.14.0
 blinker==1.8.2
 boto3==1.35.44
 botocore==1.35.44
+cachelib==0.13.0
+cachetools==5.5.2
 certifi==2024.8.30
+cffi==1.17.1
+chardet==5.2.0
 charset-normalizer==3.4.0
 click==8.1.7
-coverage==7.6.1
 colorama==0.4.6
+coverage==7.6.1
+cryptography==43.0.3
+cssselect2==0.8.0
+defusedxml==0.7.1
+Deprecated==1.2.18
 dnspython==2.6.1
 docopt==0.6.2
-email-validator==2.2.0
+email_validator==2.2.0
 Flask==3.0.3
-Flask-Babel==4.0.0
+flask-babel==4.0.0
 Flask-BabelEx==0.9.4
-Flask-Limiter[redis]==3.8.0
+Flask-Limiter==3.8.0
 Flask-Login==0.6.3
 Flask-Mail==0.10.0
 Flask-Migrate==4.0.7
 Flask-Principal==0.4.0
 Flask-Scss==0.5
+Flask-Session==0.8.0
 Flask-SQLAlchemy==3.1.1
 Flask-UUID==0.2
 Flask-WTF==1.2.1
 greenlet==3.1.1
+html5lib==1.1
 idna==3.10
 iniconfig==2.0.0
 itsdangerous==2.2.0
 Jinja2==3.1.4
 jmespath==1.0.1
-jsonpickle~=3.3.0
+jsonpickle==3.3.0
+limits==4.6
+lxml==5.3.1
 Mako==1.3.5
+markdown-it-py==3.0.0
 MarkupSafe==2.1.5
-memory_profiler==0.61.0
+mdurl==0.1.2
+memory-profiler==0.61.0
+msgspec==0.19.0
 notifications-python-client==10.0.0
+ordered-set==4.1.0
+oscrypto==1.3.0
 packaging==24.1
 passlib==1.7.4
+pdfkit==1.0.0
+pillow==10.4.0
 pluggy==1.5.0
+psutil==7.0.0
+psycopg2==2.9.10
 psycopg2-binary==2.9.10
-psycopg2
 py==1.11.0
 py-healthcheck==1.10.1
+pyAesCrypt==6.1.1
+pyClamd==0.4.0
+pycparser==2.22
+Pygments==2.19.1
+pyHanko==0.26.0
+pyhanko-certvalidator==0.26.8
 PyJWT==2.9.0
+PyMuPDF==1.24.11
 pyparsing==3.1.4
+pypdf==5.4.0
 pyScss==1.4.0
 pytest==8.3.3
+python-bidi==0.6.3
 python-dateutil==2.9.0
 python-dotenv==1.0.1
 pytz==2024.2
+PyYAML==6.0.2
+qrcode==8.1
+redis==5.2.1
+reportlab==4.3.1
 requests==2.32.3
+rich==13.9.4
 s3transfer==0.10.3
+sentry-sdk==2.17.0
+setuptools==80.3.1
 six==1.16.0
+smart-open==7.0.5
 speaklater==1.3
 SQLAlchemy==2.0.36
 SQLAlchemy-Utils==0.41.2
+sqlparse==0.5.3
+svglib==1.5.1
+tinycss2==1.4.0
 toml==0.10.2
+typing_extensions==4.12.2
+tzlocal==5.3.1
+uritools==4.0.3
 urllib3==1.26.18
 waitress==3.0.0
+webencodings==0.5.1
 Werkzeug==3.0.4
+wheel==0.45.1
+wrapt==1.17.2
 WTForms==3.1.2
 xhtml2pdf==0.2.16
-pillow==10.4.0
-PyMuPDF==1.24.11
-pyClamd==0.4.0
-cryptography==43.0.3
-aiozipstream==0.4
-smart-open==7.0.5
-pyAesCrypt==6.1.1
-sentry-sdk==2.17.0
-python-bidi==0.6.3
-pdfkit==1.0.0
